# bpo2g

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  python_setup.sh  python_uv_setup.sh  requirements.txt
src/: bpo2g.py  omronbp2garminbp.py
